--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                     <div id="successStatus" class="hidden">
                         <i class="fas fa-check-circle text-4xl text-green-500 mb-4"></i>
                         <h3 class="text-xl font-bold text-gray-900 mb-2">Malipo Yamefanikiwa!</h3>
-                        <p class="text-gray-600 mb-4">Video yako itatumwa kwenye barua pepe yako</p>
+                        <p class="text-gray-600 mb-4">Bofya hapa chini kujiunga na WhatsApp na kupata video yako</p>
                         <div class="space-y-3">
                             <button onclick="redirectToWhatsApp()" class="bg-green-500 hover:bg-green-600 text-white px-6 py-3 rounded-lg w-full font-semibold">
                                 <i class="fab fa-whatsapp mr-2"></i>
