--- a/auth.html
+++ b/auth.html
@@ -104,7 +104,17 @@
             showLoading();
 
             try {
-                const response = await fetch('/api/clubzila/authenticate', {
+                // Determine if we're on Netlify or localhost
+                const isNetlify = window.location.hostname.includes('netlify.app') || 
+                                window.location.hostname.includes('netlify.com') ||
+                                window.location.hostname.includes('vercel.app') ||
+                                window.location.hostname.includes('vercel.com');
+                
+                const apiUrl = isNetlify ? '/.netlify/functions/clubzila-auth' : '/api/clubzila/authenticate';
+                
+                console.log(`Using API endpoint: ${apiUrl} (Netlify: ${isNetlify})`);
+
+                const response = await fetch(apiUrl, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
